Fix collect method in FeedbackQuestionData to use Collectors.toList()